feat: add swago for roles service
